# Robotica-2026-I-Equipo-2E-Mora-Pacheco-Pinilla

./: .gitignore  README.md
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/: README.MD
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/Lab01Robotica/Controller Data/IRB140_6_81/: system.xml
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/Lab01Robotica/Controller Data/IRB140_6_81/BACKINFO/: backinfo.txt  key.id  program.id  rw6system.xml  version.xml
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/Lab01Robotica/Controller Data/IRB140_6_81/SYSPAR/: EIO.cfg  MOC.cfg
Laboratorio No. 01 - Robótica Industrial ABB IRB140 y RobotStudio/Lab01Robotica/Station/: Lab01Robotica.rsuser  MetaData.xml
Laboratorio No. 02 - Robótica Industrial Motoman MH6 y RoboDK/: Code_Lab02.py  Lab02.rdk  README.MD
Laboratorio No. 03 - Robótica Industrial EPSON T3 401S y EPSON RC+/: README.MD  code.txt
Laboratorio No. 03 - Robótica Industrial EPSON T3 401S y EPSON RC+/virtual_2/: IOLabels.dat.bak  Main.prg  Main.prg.bak  robot1.pts  robot1.pts.bak  virtual_2.fg  virtual_2.pf  virtual_2.sprj  virtual_2.sprj.bak  virtual_2.vis  virtual_2.wsp
Laboratorio No. 04 - Robótica de Desarrollo ROS Jazzy y Turtlesim/: README.md
Laboratorio No. 04 - Robótica de Desarrollo ROS Jazzy y Turtlesim/my_turtle_controller/src/my_turtle_controller/: setup.py
my_turtle_controller/src/my_turtle_controller/: package.xml
my_turtle_controller/src/my_turtle_controller/my_turtle_controller/: move_turtle.py
(+11 files in other folders)
