<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_turtle_controller</name>
  <version>0.1.0</version>
  <description>Paquete para el control manual y automático de turtlesim mediante teclado en ROS 2 Jazzy Jalisco.</description>
  <maintainer email="estudiante@unal.edu.co">Estudiante</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
